# 3Domoe

./: .gitignore  .gitmodules  CMakeLists.txt  CommandProcessor.hpp  GenerateCentroidsCartridge.hpp  ICartridge.hpp  README.md  build_all.bat  gui_screenshot.xwd  imgui.ini  main.cpp  params.json  run_and_screenshot.sh  test_log_no_schema.json  vcpkg.json
STL_sample/: frame_cube.stl  frame_cube_thin.stl
include/MITSUDomoe/: 3D_objects.hpp  BaseClient.hpp  Camera.hpp  CommandProcessor.hpp  ConsoleClient.hpp  GuiClient.hpp  ICartridge.hpp  IClient.hpp  Logger.hpp  ModelRenderer.hpp  RenderableMesh.hpp  Renderer.hpp  ResultRepository.hpp  Shader.hpp  convert_target_types.hpp
old_command_pattern/: CommandProcessor.hpp  GenerateCentroidsCartridge.hpp  ICartridge.hpp  _CommandProcessor.hpp  _GenerateCentroidsCartridge.hpp  _ICartridge.hpp  _main.cpp  _serial_deserial_test_eigen3 copy.cpp  _serial_deserial_test_eigen3.cpp  accessor_test.cpp  eigen3_rfl_generic_test.cpp  generic_access.cpp  glfw_eigen3_draw_test.cpp  glfw_eigen3_draw_test_from_libigl.cpp  glfw_eigen3_test.cpp  input_type_register_test.cpp  main.cpp
sample/: BIGprocess_mock_cartridge.hpp  CLImain.cpp  CalculateAreaCartridge.hpp  Convert_target_mock_cartridge.hpp  CutMeshCartridge.hpp  GUImain.cpp  GenerateCentroidsCartridge.hpp  GenerateCentroidsCartridge_mock.hpp  LoadJsonCartridge.hpp  LoadParamsCartridge.hpp  Need_many_arg_mock_cartridge.hpp  ReadStlCartridge.hpp  ReferenceTestCartridge.hpp  SubdividePolygonCartridge.hpp  SubdivisionByCircumradiusCartridge.hpp  TestRefCartridge.hpp  UseParamsCartridge.hpp  gui_main.cpp  main.cpp  ref_test_main.cpp
sample/resource/: rectangle_params.json  test_params.json  tetra.stl
shader/: barycentric_wireframe.frag  barycentric_wireframe.geom  edge.geom  normal_color.frag  normal_color.geom  solid.frag  solid.vert  test_shader_with_mvp_edge_draw.frag  test_shader_with_mvp_edge_draw.geom  test_shader_with_mvp_edge_draw.vert
source/: BaseClient.cpp  Camera.cpp  CommandProcessor.cpp  ConsoleClient.cpp  GuiClient.cpp  ModelRenderer.cpp  RenderableMesh.cpp  ResultRepository.cpp  Shader.cpp
